# mpvQC-flatpak

./: .gitignore  .pre-commit-config.yaml  Justfile  README.MD  com.github.mpvqc.mpvQC.metainfo.xml  com.github.mpvqc.mpvQC.pypi.yaml  com.github.mpvqc.mpvQC.yml  flatpak-pypi-updater.py  io.github.mpvqc.mpvQC.desktop  io.github.mpvqc.mpvQC.metainfo.xml  io.github.mpvqc.mpvQC.pypi.yaml  io.github.mpvqc.mpvQC.pypi.yml  io.github.mpvqc.mpvQC.yml  launch.sh  mpvQC.flatpakref  pyproject.toml
.github/workflows/: flatpak.yml
patches/: demux_mkv-fix-compilation-after-deprecated-definitio.patch
