[project]
name = "mpvqc-flatpak"
version = "0.1.0"
description = "Add your description here"
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "PyYaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
